<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroActivity"
    android:background="@drawable/fondo_13">
    <!--TEXTO-->
    <TextView
        android:text="REGISTRO DE USUARIO"
        android:textAllCaps="true"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--IMAGEN-->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon_login_4"
        android:layout_marginTop="15dp"/>

    <!--MI SCROOL CAJITA-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <!--Este es el cuadro que va a acomodar acuerdate-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--Nombres-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_Nombres"
                    android:hint="@string/textfield_Nombres"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Apellido Paterno-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_ApellidoPaterno"
                    android:hint="@string/textfield_ApellidoPaterno"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Apellido Materno-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_ApellidoMaterno"
                    android:hint="@string/textfield_ApellidoMaterno"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--DNI-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_DNI"
                    android:hint="@string/textfield_DNI"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Telefono-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_Numero_Telefono"
                    android:hint="@string/textfield_Numero_Telefono"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Correo-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_Email"
                    android:hint="@string/textfield_Correo"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_Password"
                    android:hint="@string/textfield_Contraseña"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Confirma la contraseña-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputLayout_R_Password"
                    android:hint="@string/textfield_ConfirmarSucontraseña"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Ubicacion-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical">
                <!--Campo para que ingreses tu ubicacion -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputLayout_Ubicacion"
                        android:hint="@string/textfield_Ubicacion"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--IMAGEN DE UBICACION DE TIPO BTN-->
                <ImageButton
                    android:id="@+id/ImageButton_Ubicacion"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="Ver en mapa"
                    android:background="@drawable/icon_mapa_3" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--REGISTRO-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Registrar"
        android:text="REGISTRARSE"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="10dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>